--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@penpot/plugin-styles": "1.0.0",
-    "@penpot/plugin-types": "1.0.0"
+    "@penpot/plugin-types": "1.0.0",
+    "blobs": "^2.3.0-beta.2"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.6",
     "vite": "^5.2.0",
     "vite-live-preview": "^0.2.2"
   }
